# yt2pod

./: .gitignore  README.md  README_zh-CN.md  pyproject.toml
src/yt2pod/: __main__.py  app.py  cli.py  config.py  export.py  models.py  proxy.py  rss.py  scheduler.py  takeout.py  youtube.py
templates/: index.html
tests/: __init__.py
