[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yt2pod"
version = "0.1.0"
description = "Convert YouTube channels/playlists to podcast RSS feeds"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "yt-dlp>=2024.4",
    "jinja2>=3.1",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
yt2pod = "yt2pod.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yt2pod"]

[tool.ruff]
line-length = 100
